infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boring-stallman-a853a87033-depl
  namespace: apps-release
  labels:
    app: boring-stallman-a853a87033
    release: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boring-stallman-a853a87033
      release: prometheus
  template:
    metadata:
      labels:
        app: boring-stallman-a853a87033
        release: prometheus
    spec:
      imagePullSecrets:
        - name: aws-ecr-creds
      serviceAccountName: alloy-service-account
      volumes:
      - name: alloy-config
        configMap:
          name: alloy-configmap
          items:
          - key: alloy.river
            path: config.alloy
      - name: podinfo
        downwardAPI:
          items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations"
            fieldRef:
              fieldPath: metadata.annotations
      containers:
      - name: boring-stallman-a853a87033
        image: 216084506783.dkr.ecr.ap-south-1.amazonaws.com/backstract_apps:boring-stallman-a853a87033
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
          name: http
        resources:
          requests:
            memory: "210Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "500m"
      - name: alloy-sidecar
        image: grafana/alloy:latest
        args:
        - "run"
        - "/etc/alloy/config.alloy"
        - "--server.http.listen-addr=0.0.0.0:12345"
        ports:
        - name: otlp-grpc
          containerPort: 4317
          protocol: TCP
        - name: otlp-http
          containerPort: 4318
          protocol: TCP
        - name: alloy-http
          containerPort: 12345
          protocol: TCP
        volumeMounts:
        - name: alloy-config
          mountPath: /etc/alloy
        - name: podinfo
          mountPath: /etc/podinfo
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "384Mi"
            cpu: "300m"
      # --- EKS ONLY BLOCK: Pipeline must strip this for GKE ---
