infra/k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boring-stallman-route
  namespace: apps-release
spec:
  parentRefs:
  - name: lcnc-gateway
    namespace: default    # Crucial: Points to the Gateway in 'default'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: boring-stallman-a853a87033-srv
      port: 80
